@@ -2,6 +2,9 @@ use strict;
 use warnings;
 package ExporterModule;
 
+use Scalar::Util 'unweaken';
+use namespace::clean;
+
 use Exporter 'import';
 our @EXPORT_OK = qw(stuff);
 
